--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@ body {
   background: white;
 }
 ::-webkit-scrollbar-thumb {
-  background: #7e7272;
+  background: rgb(244, 198, 114);
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  box-shadow: 0 0 10px orange;
+  box-shadow: 0 0 10px rgb(110, 102, 102);
 }
 #root {
   display: flex;
